dropshot/tests/fail/bad_endpoint17.stderr
error[E0277]: the trait bound `Arc<RequestContext<()>>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_endpoint17.rs:30:13
   |
30 |     _rqctx: Arc<RequestContext<()>>,
   |             ^^^ the trait `RequestContextArgument` is not implemented for `Arc<RequestContext<()>>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`

error[E0277]: the trait bound `Arc<RequestContext<()>>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_endpoint17.rs:25:1
   |
25 | / #[endpoint {
26 | |     method = GET,
27 | |     path = "/test",
28 | | }]
   | |__^ the trait `RequestContextArgument` is not implemented for `Arc<RequestContext<()>>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)
